# finch

./: .gitignore  README.md  main.py  message.txt  pyproject.toml
src/: finch.py  helpers.py  models.py
